Refactor: Added javadoc